[package]
authors = ["Radosław Wolański <radekw8733@gmail.com"]
license = "Apache-2.0"
name = "arducam-legacy"
description = "Driver for Arducam legacy cameras based on embedded-hal"
categories = ["hardware-support", "embedded", "computer-vision", "no-std::no-alloc", "multimedia::images"]
keywords = ["embedded", "embedded-hal", "arducam", "ov2640"]
version = "0.1.2"
edition = "2021"
repository = "https://github.com/radekw8733/arducam-legacy"
readme = "README.md"

[dependencies]
embedded-hal = "1.0.0"
embedded-io = "0.6"
log = "0.4"

[build-dependencies]
cc = "1.0.79"
